[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "replit-code-jam-9t"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
pytz = "^2019.3"
[tool.poetry.dev-dependencies]
