[tool.poetry]
name = "tutorona"
version = "0.1.0"
description = "web app for code jam"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-socketio = "^4.2"
pytz = "^2019.3"
gevent = "^1.4"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
